# geoviz

./: .gitignore  main.py  problems.txt  prompts.txt  pyproject.toml
api_calls/: token_count.py
experiments/hard_1/: hard1.py  logs.md
experiments/hard_2/: chatgpt_1.py  chatgpt_2_chaining.py  chatgpt_3_revised.py  claude.py  explain.md
experiments/inter_1/: inter1.py  logs.md
experiments/inter_2/: inter2.py  logs.md
experiments/simple_0/: triangle.py
experiments/simple_1/: logs.md  simple1.py
experiments/test/: test.py
media/Tex/: 15ad5ed36432a11f.tex  3dd0fb495e2aad2d.tex  52099d895444378f.tex  ed7f8f3789f6e232.tex
media/videos/inter1/480p15/partial_movie_files/RightTriangleAltitude/: partial_movie_file_list.txt
media/videos/inter2/480p15/partial_movie_files/TangentSecantDiagram/: partial_movie_file_list.txt
media/videos/simple1/480p15/partial_movie_files/SupplementaryAngles/: partial_movie_file_list.txt
media/videos/triangle/480p15/partial_movie_files/TriangleAngleProblem/: partial_movie_file_list.txt
