[project]
name = "geoviz"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.97.0",
    "manim>=0.20.1",
    "python-dotenv>=1.2.2",
]

[tool.ruff.lint.per-file-ignores]
# ignore errors related to star import in AI-generated experiments
"experiments/**.py" = ["F403", "F405"]
